media-services/flaresolverr/flaresolverr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flaresolverr
spec:
  selector:
    app: flaresolverr
  ports:
  - name: flaresolverr-ui
    port: 8191
